AFP Ideal Terminada

--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,25 +13,529 @@
     "edad_de_jubilacion = 65\n",
     "\n",
     "salario_liquido = 2500000\n",
+    "salario_bruto = 2983813\n",
     "monto_ahorrado = 5018141"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fondo A</th>\n",
+       "      <th>Fondo B</th>\n",
+       "      <th>Fondo C</th>\n",
+       "      <th>Fondo D</th>\n",
+       "      <th>Fondo E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>CAPITAL</th>\n",
+       "      <td>-3,42%</td>\n",
+       "      <td>-2,05%</td>\n",
+       "      <td>-2,54%</td>\n",
+       "      <td>-3,98%</td>\n",
+       "      <td>-4,32%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CUPRUM</th>\n",
+       "      <td>-3,04%</td>\n",
+       "      <td>-1,89%</td>\n",
+       "      <td>-2,44%</td>\n",
+       "      <td>-3,74%</td>\n",
+       "      <td>-4,29%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HABITAT</th>\n",
+       "      <td>-2,97%</td>\n",
+       "      <td>-1,86%</td>\n",
+       "      <td>-2,53%</td>\n",
+       "      <td>-4,21%</td>\n",
+       "      <td>-4,77%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MODELO</th>\n",
+       "      <td>-2,79%</td>\n",
+       "      <td>-1,78%</td>\n",
+       "      <td>-2,16%</td>\n",
+       "      <td>-3,73%</td>\n",
+       "      <td>-4,34%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PLANVITAL</th>\n",
+       "      <td>-2,92%</td>\n",
+       "      <td>-1,69%</td>\n",
+       "      <td>-2,39%</td>\n",
+       "      <td>-3,93%</td>\n",
+       "      <td>-4,55%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PROVIDA</th>\n",
+       "      <td>-3,66%</td>\n",
+       "      <td>-2,49%</td>\n",
+       "      <td>-3,33%</td>\n",
+       "      <td>-4,47%</td>\n",
+       "      <td>-4,86%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UNO</th>\n",
+       "      <td>-2,90%</td>\n",
+       "      <td>-1,99%</td>\n",
+       "      <td>-2,44%</td>\n",
+       "      <td>-3,81%</td>\n",
+       "      <td>-4,38%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SISTEMA</th>\n",
+       "      <td>-3,18%</td>\n",
+       "      <td>-1,99%</td>\n",
+       "      <td>-2,67%</td>\n",
+       "      <td>-4,16%</td>\n",
+       "      <td>-4,54%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Fondo A Fondo B Fondo C Fondo D Fondo E\n",
+       "CAPITAL    -3,42%  -2,05%  -2,54%  -3,98%  -4,32%\n",
+       "CUPRUM     -3,04%  -1,89%  -2,44%  -3,74%  -4,29%\n",
+       "HABITAT    -2,97%  -1,86%  -2,53%  -4,21%  -4,77%\n",
+       "MODELO     -2,79%  -1,78%  -2,16%  -3,73%  -4,34%\n",
+       "PLANVITAL  -2,92%  -1,69%  -2,39%  -3,93%  -4,55%\n",
+       "PROVIDA    -3,66%  -2,49%  -3,33%  -4,47%  -4,86%\n",
+       "UNO        -2,90%  -1,99%  -2,44%  -3,81%  -4,38%\n",
+       "SISTEMA    -3,18%  -1,99%  -2,67%  -4,16%  -4,54%"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import re\n",
+    "\n",
+    "url = r'https://www.spensiones.cl/apps/rentabilidad/getRentabilidad.php?tiprent=FP'\n",
+    "r = requests.get(url)\n",
+    "\n",
+    "soup = BeautifulSoup(r.text, 'html.parser')\n",
+    "\n",
+    "# Create a list of tables looking for class 'table'\n",
+    "tables = soup.find_all('table', {'class': 'table'})\n",
+    "\n",
+    "# # Read the first table as a pandas dataframe\n",
+    "# df = pd.read_html(str(tables[1]))[0]\n",
+    "# print(df.columns[0][0])\n",
+    "\n",
+    "# Dictionary by fund type and name\n",
+    "dict_returns = {'Fondo A': {'CAPITAL': None, 'CUPRUM': None, 'HABITAT': None, 'MODELO': None, 'PLANVITAL': None, 'PROVIDA': None, 'UNO': None, 'SISTEMA': None}, \n",
+    "                'Fondo B': {'CAPITAL': None, 'CUPRUM': None, 'HABITAT': None, 'MODELO': None, 'PLANVITAL': None, 'PROVIDA': None, 'UNO': None, 'SISTEMA': None}, \n",
+    "                'Fondo C': {'CAPITAL': None, 'CUPRUM': None, 'HABITAT': None, 'MODELO': None, 'PLANVITAL': None, 'PROVIDA': None, 'UNO': None, 'SISTEMA': None}, \n",
+    "                'Fondo D': {'CAPITAL': None, 'CUPRUM': None, 'HABITAT': None, 'MODELO': None, 'PLANVITAL': None, 'PROVIDA': None, 'UNO': None, 'SISTEMA': None}, \n",
+    "                'Fondo E': {'CAPITAL': None, 'CUPRUM': None, 'HABITAT': None, 'MODELO': None, 'PLANVITAL': None, 'PROVIDA': None, 'UNO': None, 'SISTEMA': None}}\n",
+    "\n",
+    "# Fill the dictionary with the values from each fund for 'Últimos 12 meses Dic 2022-Nov 2023'\n",
+    "for table in tables[1:]:\n",
+    "    df = pd.read_html(str(table))[0]\n",
+    "\n",
+    "    # Capture the fund type using re from the first column\n",
+    "    match = re.search(r'TIPO ([A-E])', df.columns[0][0])\n",
+    "    fund_type = match.group(1) if match else None\n",
+    "\n",
+    "    if fund_type:\n",
+    "        fund_name = f\"Fondo {fund_type}\"\n",
+    "        # Set the first column as the index\n",
+    "        df.set_index(df.columns[0], inplace=True)\n",
+    "\n",
+    "        for afp in df.index:\n",
+    "            if afp in dict_returns[fund_name].keys():\n",
+    "                dict_returns[fund_name][afp] = df.loc[afp, df.columns[2]]\n",
+    "                \n",
+    "df_returns = pd.DataFrame(dict_returns)\n",
+    "df_returns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "comisiones = {'Capital': 0.0144, 'Cuprum': 0.0144, 'Habitat': 0.0127, 'Modelo': 0.0058,\n",
-    "              'Planvital': 0.0116, 'Provida': 0.0145, 'Uno': 0.0049}\n",
+    "df_returns_enriched = df_returns.copy()\n",
     "\n",
-    "rentabilidad = "
+    "# Convert all values from a string like '1,23%' to a float like 0.0123\n",
+    "for column in df_returns_enriched.columns:\n",
+    "    df_returns_enriched[column] = df_returns_enriched[column].str.replace('%', '')\\\n",
+    "        .str.replace(',', '.').astype(float) / 100\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fondo A</th>\n",
+       "      <th>Fondo B</th>\n",
+       "      <th>Fondo C</th>\n",
+       "      <th>Fondo D</th>\n",
+       "      <th>Fondo E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>CAPITAL</th>\n",
+       "      <td>-0.0342</td>\n",
+       "      <td>-0.0205</td>\n",
+       "      <td>-0.0254</td>\n",
+       "      <td>-0.0398</td>\n",
+       "      <td>-0.0432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CUPRUM</th>\n",
+       "      <td>-0.0304</td>\n",
+       "      <td>-0.0189</td>\n",
+       "      <td>-0.0244</td>\n",
+       "      <td>-0.0374</td>\n",
+       "      <td>-0.0429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HABITAT</th>\n",
+       "      <td>-0.0297</td>\n",
+       "      <td>-0.0186</td>\n",
+       "      <td>-0.0253</td>\n",
+       "      <td>-0.0421</td>\n",
+       "      <td>-0.0477</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MODELO</th>\n",
+       "      <td>-0.0279</td>\n",
+       "      <td>-0.0178</td>\n",
+       "      <td>-0.0216</td>\n",
+       "      <td>-0.0373</td>\n",
+       "      <td>-0.0434</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PLANVITAL</th>\n",
+       "      <td>-0.0292</td>\n",
+       "      <td>-0.0169</td>\n",
+       "      <td>-0.0239</td>\n",
+       "      <td>-0.0393</td>\n",
+       "      <td>-0.0455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PROVIDA</th>\n",
+       "      <td>-0.0366</td>\n",
+       "      <td>-0.0249</td>\n",
+       "      <td>-0.0333</td>\n",
+       "      <td>-0.0447</td>\n",
+       "      <td>-0.0486</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UNO</th>\n",
+       "      <td>-0.0290</td>\n",
+       "      <td>-0.0199</td>\n",
+       "      <td>-0.0244</td>\n",
+       "      <td>-0.0381</td>\n",
+       "      <td>-0.0438</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SISTEMA</th>\n",
+       "      <td>-0.0318</td>\n",
+       "      <td>-0.0199</td>\n",
+       "      <td>-0.0267</td>\n",
+       "      <td>-0.0416</td>\n",
+       "      <td>-0.0454</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Fondo A  Fondo B  Fondo C  Fondo D  Fondo E\n",
+       "CAPITAL    -0.0342  -0.0205  -0.0254  -0.0398  -0.0432\n",
+       "CUPRUM     -0.0304  -0.0189  -0.0244  -0.0374  -0.0429\n",
+       "HABITAT    -0.0297  -0.0186  -0.0253  -0.0421  -0.0477\n",
+       "MODELO     -0.0279  -0.0178  -0.0216  -0.0373  -0.0434\n",
+       "PLANVITAL  -0.0292  -0.0169  -0.0239  -0.0393  -0.0455\n",
+       "PROVIDA    -0.0366  -0.0249  -0.0333  -0.0447  -0.0486\n",
+       "UNO        -0.0290  -0.0199  -0.0244  -0.0381  -0.0438\n",
+       "SISTEMA    -0.0318  -0.0199  -0.0267  -0.0416  -0.0454"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comisiones = {'CAPITAL': 0.0144, 'CUPRUM': 0.0144, 'HABITAT': 0.0127, 'MODELO': 0.0058,\n",
+    "              'PLANVITAL': 0.0116, 'PROVIDA': 0.0145, 'UNO': 0.0049}\n",
+    "\n",
+    "df_returns_enriched"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fondo</th>\n",
+       "      <th>Comisión %</th>\n",
+       "      <th>Rentabilidad %</th>\n",
+       "      <th>Comisiones</th>\n",
+       "      <th>Rentabilidad</th>\n",
+       "      <th>Saldo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>MODELO</th>\n",
+       "      <td>Fondo B</td>\n",
+       "      <td>0.0058</td>\n",
+       "      <td>-0.0178</td>\n",
+       "      <td>51918.3462</td>\n",
+       "      <td>-263227.187087</td>\n",
+       "      <td>-315145.533287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UNO</th>\n",
+       "      <td>Fondo B</td>\n",
+       "      <td>0.0049</td>\n",
+       "      <td>-0.0199</td>\n",
+       "      <td>43862.0511</td>\n",
+       "      <td>-293660.861605</td>\n",
+       "      <td>-337522.912705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PLANVITAL</th>\n",
+       "      <td>Fondo B</td>\n",
+       "      <td>0.0116</td>\n",
+       "      <td>-0.0169</td>\n",
+       "      <td>103836.6924</td>\n",
+       "      <td>-250144.276555</td>\n",
+       "      <td>-353980.968955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HABITAT</th>\n",
+       "      <td>Fondo B</td>\n",
+       "      <td>0.0127</td>\n",
+       "      <td>-0.0186</td>\n",
+       "      <td>113683.2753</td>\n",
+       "      <td>-274836.330634</td>\n",
+       "      <td>-388519.605934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CUPRUM</th>\n",
+       "      <td>Fondo B</td>\n",
+       "      <td>0.0144</td>\n",
+       "      <td>-0.0189</td>\n",
+       "      <td>128900.7216</td>\n",
+       "      <td>-279184.88308</td>\n",
+       "      <td>-408085.60468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CAPITAL</th>\n",
+       "      <td>Fondo B</td>\n",
+       "      <td>0.0144</td>\n",
+       "      <td>-0.0205</td>\n",
+       "      <td>128900.7216</td>\n",
+       "      <td>-302332.282146</td>\n",
+       "      <td>-431233.003746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PROVIDA</th>\n",
+       "      <td>Fondo B</td>\n",
+       "      <td>0.0145</td>\n",
+       "      <td>-0.0249</td>\n",
+       "      <td>129795.8655</td>\n",
+       "      <td>-365598.711206</td>\n",
+       "      <td>-495394.576706</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Fondo Comisión % Rentabilidad %   Comisiones   Rentabilidad  \\\n",
+       "MODELO     Fondo B     0.0058        -0.0178   51918.3462 -263227.187087   \n",
+       "UNO        Fondo B     0.0049        -0.0199   43862.0511 -293660.861605   \n",
+       "PLANVITAL  Fondo B     0.0116        -0.0169  103836.6924 -250144.276555   \n",
+       "HABITAT    Fondo B     0.0127        -0.0186  113683.2753 -274836.330634   \n",
+       "CUPRUM     Fondo B     0.0144        -0.0189  128900.7216  -279184.88308   \n",
+       "CAPITAL    Fondo B     0.0144        -0.0205  128900.7216 -302332.282146   \n",
+       "PROVIDA    Fondo B     0.0145        -0.0249  129795.8655 -365598.711206   \n",
+       "\n",
+       "                   Saldo  \n",
+       "MODELO    -315145.533287  \n",
+       "UNO       -337522.912705  \n",
+       "PLANVITAL -353980.968955  \n",
+       "HABITAT   -388519.605934  \n",
+       "CUPRUM     -408085.60468  \n",
+       "CAPITAL   -431233.003746  \n",
+       "PROVIDA   -495394.576706  "
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_calc = {afp: {'Fondo': None, 'Comisión %': None, 'Rentabilidad %': None,\n",
+    "                   'Comisiones': None, 'Rentabilidad': None, 'Saldo': None}\n",
+    "                   for afp in comisiones.keys()}\n",
+    "\n",
+    "for afp, calc in dict_calc.items():\n",
+    "    # Find the best results for this AFP\n",
+    "    best_results = max(df_returns_enriched.loc[afp])\n",
+    "\n",
+    "    # Find the column for the max value of each row\n",
+    "    best_fund = df_returns_enriched.loc[afp].idxmax()\n",
+    "\n",
+    "    calc['Fondo'] = best_fund\n",
+    "    calc['Comisión %'] = comisiones[afp]\n",
+    "    calc['Rentabilidad %'] = best_results\n",
+    "\n",
+    "    # Next 3 months projection\n",
+    "    calc['Comisiones'] = (comisiones[afp] * salario_bruto) * 3\n",
+    "\n",
+    "    rent_01 = best_results * monto_ahorrado\n",
+    "    rent_02 = best_results * (monto_ahorrado + rent_01)\n",
+    "    rent_03 = best_results * (monto_ahorrado + rent_01 + rent_02)\n",
+    "    calc['Rentabilidad'] = rent_01 + rent_02 + rent_03\n",
+    "\n",
+    "    calc['Saldo'] = calc['Rentabilidad'] - calc['Comisiones']\n",
+    "\n",
+    "    # Transpose the following dataframe\n",
+    "df_decide = pd.DataFrame(dict_calc)\n",
+    "\n",
+    "# Transpose the dataframe\n",
+    "df_decide = df_decide.T\n",
+    "\n",
+    "df_decide.sort_values(by='Saldo', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transpose the following dataframe\n",
+    "df_decide = pd.DataFrame(dict_calc)\n",
+    "\n",
+    "# Transpose the dataframe\n",
+    "df_decide = df_decide.T\n",
+    "\n",
+    "df_decide.to_excel('decide.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# url = r'https://www.spensiones.cl/apps/estcom/estcom.php'\n",
+    "# r = requests.get(url)\n",
+    "\n",
+    "# soup = BeautifulSoup(r.text, 'html.parser')\n",
+    "\n",
+    "# # Create a list of tables looking for class 'table'\n",
+    "# table = soup.find_all('table', {'class': 'table '})\n",
+    "# print(soup.prettify())\n",
+    "\n",
+    "# # Read the first table as a pandas dataframe\n",
+    "# df = pd.read_html(str(table))"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "gantenv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
