Delete unnecessary Excel files

--- a/afp_ideal_report.ipynb
+++ b/afp_ideal_report.ipynb
@@ -1,13 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 align='center'>AFP Ideal</h1>\n",
+    "\n",
+    "Considerar que el APV-A tiene un límite de bonificación de 6 UTM anuales. Este beneficio viene dado por el estado y es un 15% del dinero aportado a los ahorros. Revisar si es preferible el régimen A o B de acuerdo al sueldo, buscando los tramos imponibles en https://www.sii.cl/valores_y_fechas/impuesto_2da_categoria/impuesto2023.htm"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from bs4 import BeautifulSoup\n",
     "from datetime import datetime\n",
+    "from io import StringIO\n",
     "import pandas as pd\n",
+    "import re\n",
+    "import requests\n",
+    "\n",
+    "\n",
     "\n",
     "fecha_nacimiento = datetime.strptime('1994-03-01', '%Y-%m-%d')\n",
     "edad_de_jubilacion = 65\n",
@@ -19,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -131,17 +146,12 @@
        "SISTEMA    -3,18%  -1,99%  -2,67%  -4,16%  -4,54%"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import re\n",
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "import re\n",
-    "\n",
     "url = r'https://www.spensiones.cl/apps/rentabilidad/getRentabilidad.php?tiprent=FP'\n",
     "r = requests.get(url)\n",
     "\n",
@@ -149,10 +159,6 @@
     "\n",
     "# Create a list of tables looking for class 'table'\n",
     "tables = soup.find_all('table', {'class': 'table'})\n",
-    "\n",
-    "# # Read the first table as a pandas dataframe\n",
-    "# df = pd.read_html(str(tables[1]))[0]\n",
-    "# print(df.columns[0][0])\n",
     "\n",
     "# Dictionary by fund type and name\n",
     "dict_returns = {'Fondo A': {'CAPITAL': None, 'CUPRUM': None, 'HABITAT': None, 'MODELO': None, 'PLANVITAL': None, 'PROVIDA': None, 'UNO': None, 'SISTEMA': None}, \n",
@@ -163,7 +169,10 @@
     "\n",
     "# Fill the dictionary with the values from each fund for 'Últimos 12 meses Dic 2022-Nov 2023'\n",
     "for table in tables[1:]:\n",
-    "    df = pd.read_html(str(table))[0]\n",
+    "    # Convert the HTML string to a StringIO object\n",
+    "    html_string = str(table)\n",
+    "    html_data = StringIO(html_string)\n",
+    "    df = pd.read_html(html_data)[0]\n",
     "\n",
     "    # Capture the fund type using re from the first column\n",
     "    match = re.search(r'TIPO ([A-E])', df.columns[0][0])\n",
@@ -184,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,18 +510,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<li class=\"pnid-581 cid-31\"><a href=\"w3-propertyname-581.html\">QuiÃ©nes Somos</a></li>,\n",
+       " <li class=\"current pnid-639 cid-31\"><a href=\"w3-propertyname-639.html\">EducaciÃ³n Previsional</a></li>,\n",
+       " <li class=\"pnid-579 cid-19\"><a href=\"w3-propertyname-579.html\">FiscalizaciÃ³n y RegulaciÃ³n</a></li>,\n",
+       " <li class=\"pnid-621 cid-25\"><a href=\"w3-propertyname-621.html\">EstadÃ­sticas e Informes</a></li>,\n",
+       " <li><a class=\"dropdown-toggle collapsed ntgBootstrap data-target_#trbuscador aria-expanded_true data-toggle_collapse\" href=\"javascript:void(0);\">\n",
+       " <span class=\"fa fa-search\"></span><span class=\"fa fa-times-circle-o\"></span><span class=\"sr-only\">Buscar</span></a>\n",
+       " <div class=\"collapse panel panel-body\" id=\"trbuscador\">\n",
+       " <!-- Buscador -->\n",
+       " <div class=\"input-group input-group-lg buscador\">\n",
+       " <input class=\"form-control placefÂ¿holder-in-title\" id=\"keywords\" name=\"keywords\" size=\"30\" title=\"Buscar\" type=\"text\" value=\"\"/>\n",
+       " <script type=\"text/javascript\">\n",
+       "               var src=\"https://www.spensiones.cl/portal/institucional/594/w3-search.html\";\n",
+       "             </script>\n",
+       " <span class=\"input-group-btn\">\n",
+       " <button class=\"btn btn-info\" id=\"boton_busqueda\" name=\"boton_buscador\" onclick=\"javascript:return doSearch(src,31)\" type=\"button\">\n",
+       " <span class=\"fa fa-search fa-lg\"></span><span class=\"sr-only\">buscar</span>\n",
+       " </button>\n",
+       " </span>\n",
+       " <script src=\"https://www.spensiones.cl/portal/institucional/594/channels-31_js_buscar.js\" type=\"text/javascript\"></script>\n",
+       " <!-- Fin Buscador -->\n",
+       " </div>\n",
+       " </div>\n",
+       " </li>,\n",
+       " <li><a href=\"https://www.spensiones.cl/portal/institucional/594/w3-propertyvalue-9969.html\">\n",
+       " <span class=\"fa fa-envelope-o\"></span><span class=\"sr-only\">Contacto</span></a>\n",
+       " </li>,\n",
+       " <li style=\"text-align: justify; \">AFP Capital: 1,44%</li>,\n",
+       " <li style=\"text-align: justify; \">AFP Cuprum: 1,44%</li>,\n",
+       " <li style=\"text-align: justify; \">AFP Habitat: 1,27%</li>,\n",
+       " <li style=\"text-align: justify; \">AFP Modelo: 0,58%</li>,\n",
+       " <li style=\"text-align: justify; \">AFP Planvital: 1,16%</li>,\n",
+       " <li style=\"text-align: justify; \">AFP Provida: 1,45%</li>,\n",
+       " <li style=\"text-align: justify; \">AFP Uno: 0,49%</li>,\n",
+       " <li style=\"text-align: justify; \">Para saber cuÃ¡nto le cobra su AFP por administrar sus ahorros previsionales use la <a href=\"/apps/costoPrevisional/formCalculoCostoPrevisional.php\">Calculadora del Costo Previsional</a>.</li>,\n",
+       " <li style=\"text-align: justify; \">Para comparar la comisiÃ³n, servicio y temas como la rentabilidad que ofrecen las AFP use el <a href=\"/infoafp\">InfÃ³rmate y Decide</a>.</li>,\n",
+       " <li class=\"aid-10100 cid-17\"><a href=\"w3-article-10100.html\">Â¿Las y los trabajadores independientes estÃ¡n cubiertos por el Seguro de Invalidez y Sobrevivencia (SIS)?</a></li>,\n",
+       " <li class=\"aid-2838 cid-17\"><a href=\"w3-article-2838.html\">Â¿Puedo elegir cualquier tipo de fondo?</a></li>,\n",
+       " <li class=\"aid-8451 cid-17\"><a href=\"w3-article-8451.html\">Â¿QuiÃ©n supervisa a las y los asesores previsionales?</a></li>,\n",
+       " <li class=\"aid-3569 cid-17\"><a href=\"w3-article-3569.html\">Soy una persona pensionada, pero sigo trabajando Â¿debo pagar cotizaciones?</a></li>,\n",
+       " <li class=\"aid-8041 cid-17\"><a href=\"w3-article-8041.html\">Â¿QuÃ© instituciones pueden administrar el Ahorro Previsional Voluntario (APV)?</a></li>,\n",
+       " <li class=\"aid-2748 cid-17\"><a href=\"w3-article-2748.html\">Â¿CÃ³mo puede una persona saber si le corresponde algÃºn beneficio del Pilar Solidario?</a></li>,\n",
+       " <li class=\"aid-2816 cid-17\"><a href=\"w3-article-2816.html\">Â¿QuÃ© cotizaciones se registran en las cuentas de capitalizaciÃ³n individual?</a></li>,\n",
+       " <li class=\"aid-2955 cid-17\"><a href=\"w3-article-2955.html\">Â¿QuiÃ©nes tienen cobertura del SIS?</a></li>,\n",
+       " <li class=\"aid-2723 cid-17\"><a href=\"w3-article-2723.html\">Â¿CÃ³mo se determina el monto a cotizar de las y los trabajadores independientes?</a></li>,\n",
+       " <li class=\"aid-8048 cid-17\"><a href=\"w3-article-8048.html\">Â¿QuÃ© es la licitaciÃ³n de la administraciÃ³n de cuentas de nuevas y nuevos afiliados?</a></li>,\n",
+       " <li class=\"aid-2732 cid-17\"><a href=\"w3-article-2732.html\">Â¿A quiÃ©n le corresponde efectuar la cobranza de cotizaciones impagas?</a></li>,\n",
+       " <li class=\"aid-2724 cid-17\"><a href=\"w3-article-2724.html\">Â¿QuiÃ©nes no tienen obligaciÃ³n de cotizar como trabajadora o trabajador independiente?</a></li>,\n",
+       " <li class=\"aid-2823 cid-17\"><a href=\"w3-article-2823.html\">Â¿Una persona pensionada del antiguo sistema, hoy afiliada a una AFP, puede retirar sus fondos?</a></li>,\n",
+       " <li class=\"aid-2815 cid-17\"><a href=\"w3-article-2815.html\">Â¿CÃ³mo puedo saber quÃ© comisiÃ³n me cobra mi AFP?</a></li>,\n",
+       " <li class=\"aid-8437 cid-17\"><a href=\"w3-article-8437.html\">Â¿Puedo retirar el dinero de mi cuenta antes de pensionarme?</a></li>,\n",
+       " <li class=\"aid-3566 cid-17\"><a href=\"w3-article-3566.html\">Â¿QuÃ© debe hacer la o el empleador si estÃ¡ atrasado en el pago de las cotizaciones de sus trabajadoras y trabajadores?</a></li>,\n",
+       " <li class=\"aid-2903 cid-17\"><a href=\"w3-article-2903.html\">Â¿CuÃ¡nto tiempo se puede adelantar la jubilaciÃ³n por trabajos pesados?</a></li>,\n",
+       " <li class=\"aid-2908 cid-17\"><a href=\"w3-article-2908.html\">Â¿En quÃ© consiste el Ahorro Previsional Voluntario (APV) y la Cuenta de Ahorro Voluntario (Cuenta 2) ?</a></li>,\n",
+       " <li class=\"aid-10312 cid-17\"><a href=\"w3-article-10312.html\">Â¿CuÃ¡les son las obligaciones de las y los asesores previsionales y de las entidades de asesorÃ­a previsional?</a></li>,\n",
+       " <li class=\"aid-2818 cid-17\"><a href=\"w3-article-2818.html\">Â¿CuÃ¡l es la diferencia entre el sistema de AFP y el sistema antiguo o de reparto?</a></li>,\n",
+       " <li class=\"aid-3575 cid-17\"><a href=\"w3-article-3575.html\">Â¿CuÃ¡les son los requisitos para obtener una pensiÃ³n anticipada si cotizo por trabajos pesados?</a></li>,\n",
+       " <li class=\"aid-8021 cid-17\"><a href=\"w3-article-8021.html\">Â¿Tienen acceso al Pilar Solidario las personas del antiguo sistema de pensiones?</a></li>,\n",
+       " <li class=\"aid-3790 cid-17\"><a href=\"w3-article-3790.html\">Â¿Puedo cotizar en mÃ¡s de una AFP?</a></li>,\n",
+       " <li class=\"aid-7975 cid-17\"><a href=\"w3-article-7975.html\">Â¿QuÃ© es la PensiÃ³n Autofinanciada de Referencia (PAFE)?</a></li>,\n",
+       " <li class=\"aid-2728 cid-17\"><a href=\"w3-article-2728.html\">Â¿CuÃ¡l es el plazo para pagar las cotizaciones previsionales?</a></li>,\n",
+       " <li class=\"aid-2727 cid-17\"><a href=\"w3-article-2727.html\">Â¿DÃ³nde y cÃ³mo se pagan las cotizaciones?</a></li>,\n",
+       " <li class=\"aid-2912 cid-17\"><a href=\"w3-article-2912.html\">Â¿La AFP cobra comisiones por administrar la Cuenta de Ahorro Voluntario o Cuenta 2?</a></li>,\n",
+       " <li class=\"aid-2817 cid-17\"><a href=\"w3-article-2817.html\">Â¿A quiÃ©n pertenecen los recursos acumulados en la AFP?</a></li>,\n",
+       " <li class=\"aid-2726 cid-17\"><a href=\"w3-article-2726.html\">Â¿QuÃ© pasa si una persona que trabaja a honorarios cotiza tambiÃ©n como dependiente?</a></li>,\n",
+       " <li class=\"aid-2905 cid-17\"><a href=\"w3-article-2905.html\">Â¿QuÃ© es la Cuenta de Ahorro Voluntario o Cuenta 2?</a></li>,\n",
+       " <li class=\"aid-10109 cid-17\"><a href=\"w3-article-10109.html\">Â¿Todas las personas que trabajan de manera independiente estÃ¡n obligadas a cotizar?</a></li>,\n",
+       " <li><a href=\"w3-article-12825.html\"><span class=\"fa fa-map-marker\"></span> Oficinas</a></li>,\n",
+       " <li><a href=\"w3-propertyvalue-9971.html\"><span class=\"fa fa-newspaper-o\"></span> Prensa</a></li>,\n",
+       " <li><a href=\"w3-propertyvalue-10118.html\"><span class=\"fa fa-info-circle\"></span> English overview</a></li>,\n",
+       " <li><a href=\"rss3-channel.rss\"><span class=\"fa fa-rss\"></span> RSS</a></li>,\n",
+       " <li><a href=\"https://twitter.com/Superpensiones\"><span class=\"fa fa-twitter\"></span> SÃ­ganos en Twitter </a></li>,\n",
+       " <li><a href=\"/apps/admusuarioswww/loginUsuario.php\"><span class=\"fa fa-lock\"></span>Usuarios registrados</a></li>,\n",
+       " <li><a href=\"/apps/tea/indexTEA.php\"><span class=\"fa fa-info-circle\"></span>Transferencia electrÃ³nica de archivos</a></li>,\n",
+       " <li><a href=\"w3-article-3917.html\">Certificado del sitio</a></li>,\n",
+       " <li><a href=\"w3-article-3915.html\">PolÃ­tica de privacidad</a></li>,\n",
+       " <li><a href=\"w3-article-7983.html\">Visualizadores</a></li>,\n",
+       " <li><a href=\"w3-contents.html\">Mapa del sitio</a></li>]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# url = r'https://www.spensiones.cl/apps/estcom/estcom.php'\n",
-    "# r = requests.get(url)\n",
+    "url = r'https://www.spensiones.cl/portal/institucional/594/w3-article-2810.html'\n",
+    "r = requests.get(url)\n",
     "\n",
-    "# soup = BeautifulSoup(r.text, 'html.parser')\n",
+    "soup = BeautifulSoup(r.text, 'html.parser')\n",
     "\n",
-    "# # Create a list of tables looking for class 'table'\n",
-    "# table = soup.find_all('table', {'class': 'table '})\n",
-    "# print(soup.prettify())\n",
+    "# Create a list of tables looking for class 'table'\n",
+    "table = soup.find_all('li')\n",
+    "table\n",
     "\n",
     "# # Read the first table as a pandas dataframe\n",
     "# df = pd.read_html(str(table))"
@@ -535,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
